# lightspeed-agentic-sandbox

./: .coderabbit.yaml  .gitignore  AGENTS.md  ARCHITECTURE.md  Containerfile  Makefile  artifacts.lock.yaml  build.args  package-lock.json  pyproject.toml  requirements-build.txt  requirements.aarch64.txt  requirements.x86_64.txt  rpms.in.yaml  rpms.lock.yaml
.ai/spec/: README.md
.ai/spec/decisions/: README.md
.ai/spec/how/: README.md  project-structure.md  provider-architecture.md
.ai/spec/what/: README.md  audit-logging.md  configuration.md  e2e-testing.md  health-probes.md  (+3 more)
.konflux/: profiles.toml  pypi_wheel_only.txt  requirements-build.txt  requirements.hashes.source.txt  requirements.hashes.wheel.txt  requirements.hermetic.txt  requirements.overrides.txt  rpms.in.yaml  rpms.lock.yaml
.tekton/: lightspeed-agentic-sandbox-pull-request.yaml  lightspeed-agentic-sandbox-push.yaml
evals/: README.md  credentials.py  run.sh  schemas.py  test_schemas.py  test_skill_invocation.py
scripts/: e2e-containers.sh  gen-build-deps.py  generate-rpm-lock.sh  konflux_resolve.py
src/lightspeed_agentic/: app.py  audit.py  config.py  factory.py  health.py  mcp.py  metrics.py  tracing.py  types.py
tests/: test_audit.py  test_config.py  test_deepagents.py  test_factory.py  test_health.py  test_mcp.py  test_metrics.py  test_openai_schema.py  test_ready.py  test_reasoning_config.py  test_routes.py  test_tracing.py
tests/e2e/: config.env  conftest.py  credentials.py  mock_mcp_server.py  pytest.ini  runner.py  schemas_contract.py  test_mcp_bdd.py  test_reasoning_config_bdd.py  test_sandbox_e2e_bdd.py
(+34 files in other folders)
