[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightspeed-agentic"
version = "0.1.0"
description = "Multi-provider agentic sandbox for OpenShift Lightspeed"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
claude = ["claude-agent-sdk>=0.1.81"]
gemini = ["google-adk>=1.33.0"]
openai = ["openai-agents>=0.17.2"]
all = ["lightspeed-agentic[claude,gemini,openai]"]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "ruff>=0.15.12",
    "lightspeed-agentic[claude,gemini,openai]",
]
eval = ["pytest>=9.0.3", "pytest-asyncio>=1.3.0", "pytest-timeout>=2.4.0", "pytest-xdist>=3.8.0", "jsonschema>=4.26.0"]
e2e = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-bdd>=8.1.0",
    "pytest-timeout>=2.4.0",
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lightspeed_agentic"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["A", "ARG", "ASYNC", "B", "E", "F", "I", "N", "PT", "RUF", "S", "SIM", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"tests/e2e/**/*.py" = ["S101", "I001", "F401"]
"evals/**/*.py" = ["S101"]
"src/lightspeed_agentic/routes/chat.py" = ["N815"]
"src/lightspeed_agentic/routes/models.py" = ["N815"]

[tool.mypy]
python_version = "3.12"
strict = true
